styles.css
:root {
  --bs-primary: rgb(188, 211, 230);
  --bs-secondary: #957980;
  --bs-light: #f8f5ff;
  --bs-dark: #051424;
}

.btn-primary {
  --bs-btn-bg: var(--bs-primary);
  --bs-btn-border-color: var(--bs-primary);
  --bs-btn-hover-bg:  rgb(72, 102, 127);
  --bs-btn-hover-border-color: rgb(72, 102, 127);
}

.Top {
  background-color: #957980;
  padding-bottom: 0px;
  text-align: center;
}

.Design{
  background-color: rgb(188, 211, 230);

}

.Top, .Design {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  max-width: 5px;
}

svg * {
  stroke-width: 0;
}

